<resources>
    <string name="app_name">Магазин</string>
    <string name="checkout_header">Оформление заказа</string>
    <string name="checkout_sum">итого</string>
    <string name="checkout_hint_phone">Телефон</string>
    <string name="checkout_make_order">Оформить заказ</string>
    <string name="checkout_total_price">Итого к оплате</string>
    <string name="checkout_minus">-</string>
    <string name="checkout_discount">Скидка</string>
    <string name="checkout_basket_items">Товары в корзине</string>
    <string name="checkout_order_details">Состав заказа</string>
    <string name="checkout_payment_card">Картой</string>
    <string name="checkout_payment_cash">Наличными</string>
    <string name="checkout_payment_method">Способ оплаты</string>
    <string name="checkout_hint_middle_name">Отчество</string>
    <string name="checkout_hint_first_name">Имя</string>
    <string name="checkout_hint_last_name">Фамилия</string>
    <string name="checkout_personal_data">Личные данные</string>
    <string name="checkout_items_count">(%1$d)</string>
    <string name="product_info_header">Информация о товаре</string>
    <string name="basket_header">Корзина</string>
    <string name="basket_checkout">оформить заказ</string>
    <string name="basket_show_product_info">товар</string>
    <string name="item_delete_label">Удалить</string>
    <string name="item_piece_label">шт.</string>
    <string name="catalog_header">Каталог</string>
    <string name="add_to_basket">В корзину</string>
    <string name="msg_order_processed">Заказ оформлен!</string>
    <string name="err_no_internet_connection">Нет соединения с интернетом</string>
    <string name="err_connection_error">Ошибка соединения с сервером</string>
    <string name="err_incorrect_fields_value">Поля заполнены некорректно</string>
    <string name="catalog_search_hint">Введите название</string>
    <string name="err_empty_order">В заказе нет товаров</string>
    <string name="categories_header_label">Категории товаров</string>
    <string name="basket_total_price_label">Итого</string>
    <string name="empty_basket_label">Вы пока не добавили ни одного товара в корзину</string>
    <string name="detailed_attributes_label">Характеристики:</string>
    <string name="recently_viewed_label">Вы недавно просматривали:</string>
</resources>
