<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="@dimen/headerVerticalMargin"
                android:fontFamily="sans-serif-light"
                android:text="@string/checkout_header"
                android:textColor="@android:color/black"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/headerDivider"
                android:layout_width="0dp"
                android:layout_height="2dp"
                android:layout_marginTop="@dimen/headerVerticalMargin"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/header" />

            <TextView
                android:id="@+id/personalDataLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="sans-serif-light"
                android:text="@string/checkout_personal_data"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/header"
                app:layout_constraintTop_toBottomOf="@+id/headerDivider" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/checkout_hint_last_name"
                android:inputType="textPersonName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/personalDataLabel"
                app:layout_constraintTop_toBottomOf="@+id/personalDataLabel" />

            <EditText
                android:id="@+id/firstName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/checkout_hint_first_name"
                android:inputType="textPersonName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/personalDataLabel"
                app:layout_constraintTop_toBottomOf="@+id/lastName" />

            <EditText
                android:id="@+id/middleName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/checkout_hint_middle_name"
                android:inputType="textPersonName"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/personalDataLabel"
                app:layout_constraintTop_toBottomOf="@+id/firstName" />

            <EditText
                android:id="@+id/phoneNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:digits="0123456789+"
                android:ems="10"
                android:fontFamily="sans-serif"
                android:hint="@string/checkout_hint_phone"
                android:inputType="phone"
                android:textSize="20sp"
                app:layout_constraintStart_toStartOf="@+id/personalDataLabel"
                app:layout_constraintTop_toBottomOf="@+id/middleName" />

            <TextView
                android:id="@+id/paymentMethodLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                android:fontFamily="sans-serif-light"
                android:text="@string/checkout_payment_method"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/personalDataLabel"
                app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

            <RadioGroup
                android:id="@+id/paymentMethodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@id/paymentMethodLabel"
                app:layout_constraintLeft_toLeftOf="@id/personalDataLabel"

                >

                <RadioButton
                    android:id="@+id/radioCash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif"
                    android:text="@string/checkout_payment_cash"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/radioCard"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="sans-serif"
                    android:text="@string/checkout_payment_card"
                    android:textSize="20sp" />
            </RadioGroup>

            <View
                android:id="@+id/checkoutDivider"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="24dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/paymentMethodGroup" />

            <TextView
                android:id="@+id/orderDetailsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"

                android:fontFamily="sans-serif-light"
                android:text="@string/checkout_order_details"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/personalDataLabel"
                app:layout_constraintTop_toBottomOf="@+id/checkoutDivider" />

            <TextView
                android:id="@+id/productsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/checkout_basket_items"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="@+id/orderDetailsLabel"
                app:layout_constraintTop_toBottomOf="@+id/orderDetailsLabel" />

            <TextView
                android:id="@+id/productsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                tools:text="(1)"
                app:layout_constraintTop_toTopOf="@+id/productsLabel"
                app:layout_constraintStart_toEndOf="@+id/productsLabel"
                />

            <TextView
                android:id="@+id/rawPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                tools:text="1500 Р"
                app:layout_constraintTop_toTopOf="@id/productsLabel"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/discountLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:text="@string/checkout_discount"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                app:layout_constraintTop_toBottomOf="@+id/productsLabel"
                app:layout_constraintStart_toStartOf="@+id/orderDetailsLabel"
                />

            <TextView
                android:id="@+id/discountMinusSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                android:text="@string/checkout_minus"
                app:layout_constraintTop_toTopOf="@id/discountLabel"
                app:layout_constraintEnd_toStartOf="@id/discountAmount"
                />

            <TextView
                android:id="@+id/discountAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:textSize="18sp"
                android:textColor="@android:color/black"
                tools:text="0 Р"
                app:layout_constraintTop_toTopOf="@id/discountLabel"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <TextView
                android:id="@+id/totalPriceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"

                android:fontFamily="sans-serif-light"
                android:text="@string/checkout_total_price"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="@+id/personalDataLabel"
                app:layout_constraintTop_toBottomOf="@+id/discountLabel" />


            <TextView
                android:id="@+id/totalPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:fontFamily="sans-serif-light"
                tools:text="1500 Р"
                android:textColor="@android:color/black"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="@id/totalPriceLabel"
                app:layout_constraintEnd_toEndOf="parent"
                />

            <Button
                android:id="@+id/checkoutPay"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="12dp"
                android:background="@drawable/button_rounded_black_background"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/checkout_pay"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/totalPrice"
                app:layout_constraintStart_toStartOf="@+id/totalPriceLabel"
                app:layout_constraintTop_toBottomOf="@+id/totalPriceLabel" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>